--- a/dashboard.html
+++ b/dashboard.html
@@ -27,12 +27,11 @@
       0%, 100% { opacity: 0.07; }
       50% { opacity: 0.15; }
     }
-
     .content {
       position: relative;
       z-index: 1;
+      padding-bottom: 140px; /* to avoid footer overlap */
     }
-
     .header {
       background-color: #d90000;
       color: white;
@@ -41,7 +40,6 @@
       justify-content: space-between;
       align-items: center;
     }
-
     .main-card {
       background: rgba(255, 255, 255, 0.9);
       margin: -20px 10px 10px;
@@ -50,29 +48,24 @@
       padding: 20px;
       backdrop-filter: blur(10px);
     }
-
     .user-info {
       font-weight: bold;
       font-size: 16px;
     }
-
     .balance {
       font-size: 20px;
       margin-top: 10px;
     }
-
     .balance .eye {
       color: red;
       cursor: pointer;
       margin-left: 5px;
     }
-
     .buttons-row {
       display: flex;
       justify-content: space-around;
       margin-top: 15px;
     }
-
     .btn {
       background-color: #ffe5e5;
       border: 1px solid #ffcccc;
@@ -85,21 +78,18 @@
       font-size: 14px;
       cursor: pointer;
     }
-
     .banner {
       margin: 10px auto;
       border-radius: 10px;
       width: 95%;
       display: none;
     }
-
     .section {
       background: white;
       border-radius: 10px;
       margin: 10px;
       padding: 10px;
     }
-
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -107,14 +97,54 @@
       text-align: center;
       font-size: 12px;
     }
-
     .grid div {
       padding: 10px;
       cursor: pointer;
       background: #f8f8f8;
       border-radius: 10px;
     }
-
+    .ad-bottom {
+      position: fixed;
+      bottom: 50px;
+      left: 0;
+      right: 0;
+      background: white;
+      padding: 5px 10px;
+      box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+      z-index: 9;
+    }
+    .ad-wrapper {
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    video#adVideo {
+      width: 100%;
+      border-radius: 10px;
+      pointer-events: none;
+    }
+    .mute-btn {
+      position: absolute;
+      bottom: 5px;
+      right: 10px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 20px;
+      padding: 2px 8px;
+      font-size: 12px;
+      cursor: pointer;
+      z-index: 2;
+    }
+    .countdown {
+      position: absolute;
+      top: 5px;
+      right: 10px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 20px;
+      padding: 2px 8px;
+      font-size: 12px;
+      font-weight: bold;
+      z-index: 2;
+    }
     .bottom-nav {
       position: fixed;
       bottom: 0;
@@ -131,17 +161,13 @@
   </style>
 </head>
 <body>
-  <!-- Blurred Background Logo -->
   <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
-
   <div class="content">
-    <!-- Header -->
     <div class="header">
       <div><b>Airtel Promo</b></div>
       <div><img src="bell.png" alt="Bell" width="20" /></div>
     </div>
 
-    <!-- Main Card -->
     <div class="main-card">
       <div class="user-info" id="userName">Loading...</div>
       <div id="userNumber">00000000000</div>
@@ -155,11 +181,9 @@
       </div>
     </div>
 
-    <!-- Promo & Update Banners -->
     <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
     <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
 
-    <!-- Services Grid -->
     <div class="section">
       <b>Transfer & Cashout</b>
       <div class="grid">
@@ -181,7 +205,19 @@
     </div>
   </div>
 
-  <!-- Bottom Navigation -->
+  <!-- Bottom Ad -->
+  <div class="ad-bottom">
+    <div class="ad-wrapper">
+      <video id="adVideo" autoplay muted playsinline>
+        <source src="your-ad.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+      <div class="mute-btn" onclick="toggleMute()">🔇</div>
+      <div class="countdown" id="countdown">20s</div>
+    </div>
+  </div>
+
+  <!-- Footer Nav -->
   <div class="bottom-nav">
     <div onclick="location.href='dashboard.html'">🏠 Home</div>
     <div onclick="location.href='scan.html'">📷 Scan</div>
@@ -193,7 +229,6 @@
     const user = JSON.parse(localStorage.getItem('user')) || {};
     const balanceElement = document.getElementById('userBalance');
     let isHidden = false;
-
     document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
     document.getElementById('userNumber').innerText = user.phone || '08000000000';
     const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
@@ -202,6 +237,12 @@
     function toggleBalance() {
       isHidden = !isHidden;
       balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
+    }
+
+    function toggleMute() {
+      const video = document.getElementById('adVideo');
+      video.muted = !video.muted;
+      document.querySelector('.mute-btn').innerText = video.muted ? '🔇' : '🔊';
     }
 
     const updateBanner = document.getElementById('updateBanner');
@@ -218,6 +259,15 @@
     }
 
     cycleBanners();
+
+    // Countdown for ad
+    let count = 20;
+    const countdownEl = document.getElementById('countdown');
+    setInterval(() => {
+      count--;
+      if (count <= 0) count = 20;
+      countdownEl.innerText = count + 's';
+    }, 1000);
   </script>
 </body>
-</html>
+  </html>
